log/build_2023-11-09_14-07-49/mypkg/stderr.log
  File "/home/ryousuke/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 20
    <license>BSD-3-Clause</license>
    ^
SyntaxError: invalid syntax

